tests/snapshots/snapshots/snapshots__snapshots__error_messages__error_not_initialized.snap
---
source: tests/snapshots/error_messages.rs
expression: normalize_output(&output.stderr)
---
Error: Beads not initialized: run 'br init' first
Hint: Run: br init
